hphp/hack/test/typecheck/sealed/method_class_01.php.exp
ERROR: File "method_class_01.php", line 19, characters 19-21:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "method_class_01.php", line 19, characters 19-21:
  You cannot override the method because it is sealed.
  File "method_class_01.php", line 7, characters 19-21:
  Declaration is here
